# juno-leaderboard-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RELAY_SETUP.md  RELEASE_CHECKLIST.md  SETUP.md  icon.svg.import  juno.config.json  project.godot
addons/juno_leaderboard/: BUILD.md  JunoLeaderboard.gd  JunoLeaderboard.gd.uid  build.bat  build.sh  clean.bat  clean.sh  juno_leaderboard.gdextension  juno_leaderboard.gdextension.uid  juno_plugin.gd  juno_plugin.gd.uid  plugin.cfg  rebuild.bat  rebuild.sh
addons/juno_leaderboard/dock_ui/: juno_dock.gd  juno_dock.gd.uid  juno_dock.tscn
addons/juno_leaderboard/rust/: Cargo.toml
addons/juno_leaderboard/rust/src/: lib.rs
examples/: leaderboard_example.gd  leaderboard_example.gd.uid  leaderboard_example.tscn
hosting/: bundle.js  relay.html
